fix card button spacing

--- a/pages/css/service.css
+++ b/pages/css/service.css
@@ -70,3 +70,7 @@ p2{
 
 }
 
+#newBtn{
+    margin-top: 1.5rem;
+    margin-left: 8rem;
+}
